# a2rlDroneRacing_Perception

./: README.md
perception/: CMakeLists.txt  package.xml  setup.py
perception/launch/: perception_launch.py
perception/msg/: Bbox.msg  GatePrediction.msg
perception/src/: detector_node.py
perception/src/Detector/: Detector.py  img_utils.py
perception/src/Detector/models/: keras_mobilenet_v2_ssdlite.py
perception/src/Detector/models/graphs/: mobilenet_v2_ssdlite_praph.py
perception/src/Detector/models/layers/: AnchorBoxesLayer.py  DecodeDetectionsFastLayer.py  DecodeDetectionsLayer.py  L2NormalizationLayer.py
